--- a/practicas/p02/index.html
+++ b/practicas/p02/index.html
@@ -6,6 +6,11 @@
     <title>Inteligencia Financiera</title>
 </head>
 <body>
+
+    <img src="./images/camino.jpg.jpg" alt="Camino a la libertad financiera">
+
+    <br>
+
     <h1>Hábitos de los Ricos</h1>
 
     <h2>1. Trabaja para ti mismo/a</h2>
@@ -21,6 +26,8 @@
     satisfecho con este cliente tu empresa personal puede
     decidir hacer un cambio en cualquier momento. 
 
+    <br><br>
+
     Esta es la mentalidad con la que las personas millonarias
     ven el mundo, intenta aplicarla a tu vida: ¿Qué puedes
     hacer para mejorar los servicios que ofrece tu empresa
@@ -31,6 +38,9 @@
     <p>Al contrario de lo que dice el tópico, los que más dinero
     ganan en cada ámbito no son los que trabajan más horas
     sino los que trabajan de forma más inteligente.
+
+    <br><br>
+
     El objetivo de tu empresa personal no es trabajar duro,
     es <em>trabajar el mínimo de horas posible para desempeñar
     tus tareas de forma eficaz</em> y tener el máximo de tiempo
