--- a/practicas/p05/formulario.html
+++ b/practicas/p05/formulario.html
@@ -37,6 +37,25 @@
 
         <p>Diseño personalizado del Tenis</p>
 
+        <p>Color <em>(escoge uno)</em>:</p>
+        <ul>
+        <li><input type="radio" name="color" value="red">Rojo</li>
+        <li><input type="radio" name="color" value="blue">Azul</li>
+        <li><input type="radio" name="color" value="black">Negro</li>
+        <li><input type="radio" name="color" value="silver">Plateado</li>
+        </ul>
+
+        <p>Características <em>(escoge tantas como quieras)</em>:</p>
+        <ul>
+          <li><input type="checkbox" name="features[]" value="laces">Cordones brillantes</li>
+          <li><input type="checkbox" name="features[]" value="laces" checked>Logo metálico</li>
+          <li><input type="checkbox" name="features[]" value="laces">Suela luminosa</li>
+          <li><input type="checkbox" name="features[]" value="laces">WiFi integrado</li>
+        </ul>
+
+        <p>Talla</p>
+        <p>Las medidas reflejan el estándar masculino:</p>
+      </fieldset>
     
       <p><input type="submit" value="¡Chidos mis tenis!">
         <input type="reset" value="Limpiar"></p>    
